# spiral_openskill

./: .dockerignore  .gitignore  alembic.ini  backend.Dockerfile  database_design.md  docker-compose.dev.yml  frontend.Dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 062865ebee50_add_match_types_to_matches.py  6f3eba72decc_create_match_view.py  7517f1512353_new_tables.py  7fe7d4c72f32_create_person_to_player_association.py  86f5eacd4891_generate_database.py  abc5f560bcdf_create_stats_summary_view.py  b01943af9453_create_ranking_history_view.py  cc7f25ef7cf0_add_constraint_to_session_for_uniqueness.py  e8aadd4e5967_add_rank_history_table.py  ea576ea0ccbf_add_start_and_end_times_to_matches.py
backend/: .gitignore  Cargo.toml
backend/src/backend/: Cargo.toml
backend/src/backend-api/: Cargo.toml
backend/src/backend-api/src/: api.rs  error.rs  lib.rs  routes.rs  state.rs
backend/src/backend-api/src/routes/: player_stats.rs  players.rs  rank_history.rs
backend/src/backend-database/: Cargo.toml
backend/src/backend-database/src/: lib.rs
backend/src/backend/src/: main.rs
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: main.tsx  types.d.ts
dashboard/src/components/: App.tsx  Gauges.tsx  Matchmaker.tsx  NormalDistChart.tsx  PartnerTable.tsx  PlayerDropdown.tsx  Session.tsx  SkillChart.tsx
dashboard/src/layouts/: Layout.tsx
dashboard/src/utils/: api.ts
docker/: nginx.conf
scripts/: api.py  average_playtime.py  common.py  data_extraction.py  database.py  player_association.py  ranking.py  ranking_history.py
