[project]
name = "spiral-openskill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "networkx>=3.4.2",
    "openskill>=6.0.2",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["black>=25.1.0", "isort>=6.0.1", "mypy>=1.15.0"]
