[project]
name = "spiral-openskill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "networkx>=3.4.2",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "alembic>=1.15.2",
    "beautifulsoup4>=4.13.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "openskill>=6.0.2",
]
