[package]
name = "backend-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
thiserror = "2.0.17"
backend-database = { path = "../backend-database" }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tower-http = { version = "0.6.6", features = ["trace"] }
